--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "Lua.diagnostics.globals": [
         "SMODS",
-        "sendDebugMessage"
+        "sendDebugMessage",
+        "create_badge",
+        "G",
+        "Sprite",
+        "localize"
     ]
 }
